# memo-app

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0112_initial_schema.py  20260517_0112_seed_default_user.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  memos.py  profile.py  tags.py
backend/app/core/: config.py  database.py  errors.py
backend/app/models/: __init__.py  base.py  memo.py  memo_tag.py  tag.py  user_profile.py
backend/app/repositories/: __init__.py  memo_repository.py  profile_repository.py  tag_repository.py
backend/app/schemas/: __init__.py  _validators.py  memo.py  profile.py  tag.py
backend/app/services/: __init__.py  memo_service.py  profile_service.py  tag_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_memos.py  test_profile.py  test_tags.py
backend/tests/core/: test_errors.py
backend/tests/models/: test_memo.py  test_memo_tag.py  test_tag.py  test_user_profile.py
backend/tests/repositories/: test_memo_repository.py  test_profile_repository.py  test_tag_repository.py
backend/tests/schemas/: test_memo_schemas.py  test_profile_schemas.py  test_tag_schemas.py
backend/tests/services/: test_memo_service.py  test_profile_service.py  test_tag_service.py
docs/: api-spec.md  architecture.md  db-schema.md  project-overview.md  requirements.md  roadmap.md
docs/design/: README.md  design.md
docs/tasks/: frontend-profile.md  (+6 more)
frontend/: .prettierignore  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.mts
(+4 files in other folders)
